# logpilot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  config.example.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: pi.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
completions/: logpilot.bash  logpilot.fish  logpilot.zsh
docs/: MCP_TESTING.md
specs/001-tmux-log-copilot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tmux-log-copilot/checklists/: requirements.md
specs/001-tmux-log-copilot/contracts/: mcp-schema.json
src/: error.rs  lib.rs  main.rs  observability.rs
src/analyzer/: alerts.rs  incidents.rs  mod.rs  patterns.rs
src/buffer/: manager.rs  mod.rs  persistence.rs  ring.rs
src/capture/: mod.rs  pane.rs  session.rs  tmux.rs
src/cli/: ask.rs  filter.rs  mcp.rs  mod.rs  status.rs  summarize.rs  watch.rs
src/mcp/: data_store.rs  mod.rs  protocol.rs  resources.rs  rmcp_server.rs  server.rs
src/models/: alert.rs  incident.rs  log_entry.rs  mod.rs  pane.rs  pattern.rs  session.rs  severity.rs
src/pipeline/: cluster.rs  dedup.rs  formats.rs  mod.rs  parser.rs
tests/: test_alerts.rs  test_filter.rs  test_mcp_protocol.rs  test_pipeline_integration.rs
tests/fixtures/: mock_tmux.sh
tests/integration/: test_analyzer.rs  test_capture.rs
