[package]
name = "logpilot"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
authors = ["LogPilot Contributors"]
description = "AI-Native tmux Log Copilot for Support Incident Tracking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jellydn/logpilot"
keywords = ["tmux", "logs", "monitoring", "cli", "mcp"]
categories = ["command-line-utilities", "development-tools"]
include = ["Cargo.lock", "**/Cargo.toml", "**/README.md", "**/LICENSE*", "src/**/*.rs", "completions/**/*", "config.example.toml"]

[[bin]]
name = "logpilot"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Terminal UI
crossterm = "0.29"

# Pattern matching
regex = "1.10"

# Concurrent collections
dashmap = "5.5"

# Database
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"

# Configuration
toml = "0.9"
dirs = "5.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP protocol
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
