[package]
name = "logpilot"
version = "0.1.2"
edition = "2021"
rust-version = "1.86"
authors = ["LogPilot Contributors"]
description = "AI-Native tmux Log Copilot for Support Incident Tracking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jellydn/logpilot"
keywords = ["tmux", "logs", "monitoring", "cli", "mcp"]
categories = ["command-line-utilities", "development-tools"]
include = ["Cargo.lock", "**/Cargo.toml", "**/README.md", "**/LICENSE*", "src/**/*.rs", "tests/**/*.rs", "completions/**/*", "config.example.toml"]

[[bin]]
name = "logpilot"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.51", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.6", features = ["derive"] }

# Terminal UI
crossterm = "0.29"

# Pattern matching
regex = "1.11"

# Concurrent collections
dashmap = "6.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Utilities
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
once_cell = "1.21"

# Configuration
toml = "0.9"
dirs = "6.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP protocol - Official Rust SDK
rmcp = { version = "0.16", features = ["server", "macros", "transport-io", "schemars"] }
schemars = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
